SPARK-2091 code cleanup

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -17,221 +17,13 @@
 ## two digit country code should be in uppercase. Often, it is not necessary to
 ## specify the country code.
 ##
-## A full list of language codes can be found at
-## http://www-old.ics.uci.edu/pub/ietf/http/related/iso639.txt
-## and a full list of country codes can be found at
-## http://www.chemie.fu-berlin.de/diverse/doc/ISO_3166.html
+## A list of language codes can be found at
+## https://www.loc.gov/standards/iso639-2/php/code_list.php
+## and a list of country codes can be found at
+## http://kirste.userpage.fu-berlin.de/diverse/doc/ISO_3166.html
 ##
 ## In property strings that are parameterized, single quotes can be used to
 ## quote the "{" (curly brace) if necessary. A real single quote is represented by ''.
-##
-## REVISION HISTORY (by Spark version):
-##
-## 2.0.1
-##      Added key: 'message.restart.spark.changes'
-##      Added key: 'message.enter.icq'
-##      Added key: 'title.icq.registration'
-##      Added key: 'button.quit'
-##
-##
-##
-## 2.0.2
-##     Added key: 'button.new'
-##     Added key: 'label.group'
-##     Added key: 'label.jabber.id'
-##     Added key: 'label.enter.group.name'
-##     Added key: 'title.new.roster.group'
-##     Added key: 'title.add.contact.group'
-##     Added key: 'message.add.contact.to.list'
-##     Added key: 'title.add.contact'
-##     Added key: 'tab.conferences'
-##     Added key: 'message.authenticating'
-##     Added key: 'title.file.transfer.preferences'
-##     Added key: 'menuitem.about'
-##     Added key: 'message.invalid.status'
-##     Added key: 'message.cannot.add.contact.to.shared.group
-##     Added key: 'message.specify.contact.jid'
-##     Added key: 'message.invalid.jid.error'
-##     Added key: 'message.specify.group'
-##     Added key: 'add'
-##
-##
-##
-## 2.0.5
-##     Added key: 'Broadcast'
-##     Added key: 'label.user.on.public.network'
-##     Added key: 'label.network'
-##
-##
-## 2.0.6
-##     Added key: 'button.add.user'
-##     Added key: 'menuitem.sign.in'
-##     Added key: 'menuitem.sign.out'
-##     Added key: 'menuitem.sign.in.at.login'
-##     Added key: 'menuitem.enter.login.information'
-##     Added key: 'menuitem.delete.login.information'
-##     Added key: 'button.save'
-##
-##
-## 2.5
-##     Added key: 'button.start.chat'
-##     Added key: 'button.send.email'
-##     Added key: 'available'
-##     Added key: 'checkbox.tabs.on.top'
-##     Added key: 'user.has.signed.in'
-##     Added key: 'user.has.signed.off'
-##     Added key: 'label.unable.to.add.contact'
-##     Added key: 'label.conflict.error'
-##     Added key: 'message.room.creation.error'
-##     Added key: 'checkbox.allow.buzz'
-##     Added key: 'message.disconnected.group.chat.error'
-##     Added key: 'menuitem.show.offline.group'
-##     Added key: 'menuitem.move.to'
-##     Added key: 'menuitem.copy.to'
-##     Added key: 'label.message.style'
-##     Added key: 'label.emoticons'
-##     Added key: 'checkbox.enable.emoticons'
-##     Added key: 'message.unable.to.retrieve.last.activity'
-##     Added key: 'checkbox.use.system.look.and.feel'
-##
-## 2.5.2
-##     Added key: 'tooltip.place.voice.call'
-##     Added key: 'message.buzz.alert.notification'
-##     Added key: 'message.buzz.sent'
-##
-## 2.5.2
-##     Added key: 'menuitem.user.guide'
-##
-##
-##
-## 2.5.7
-##     Added key: 'menuitem.languages'
-##     Added key: 'message.restart.required'
-##     Added key: 'checkbox.notify.user.goes.offline'
-##     Added key: 'checkbox.notify.user.comes.online'
-##     Added key: 'message.send.to.these.people'
-##     Added key: 'message'
-##     Added key: 'message.normal'
-##     Added key: 'message.alert.notify'
-##
-## 2.5.8
-##     Added key: 'message.enter.simple'
-##     Added key: 'message.enter.irc'
-##     Added key: 'message.enter.gadugadu'
-##     Added key: 'title.simple.registration'
-##     Added key: 'title.irc.registration'
-##     Added key: 'title.gadugadu.registration'
-##     Added key: 'message.username.error'
-##     Added key: 'message.password.error'
-##     Added key: 'message.nickname.error'
-##
-## 2.5.9
-##     Added key: 'message.gateway.username.error.
-##     Added key: 'message.gateway.password.error.
-##     Added key: 'message.gateway.nickname.error.
-##     Added key: 'answer'
-##     Added key: 'online'
-##     Added key: 'online'
-##     Added key: 'offline'
-##     Added key: 'participants'
-##     Added key: 'unfiled'
-##     Added key: 'while.offline'
-##     Added key: 'action.clear'
-##     Added key: 'action.copy '
-##     Added key: 'action.cut'
-##     Added key: 'action.paste'
-##     Added key: 'action.print'
-##     Added key: 'action.save'
-##     Added key: 'action.select.all'
-##     Added key: 'button.add2'
-##     Added key: 'button.copy.to.clipboard'
-##     Added key: 'button.reconnect2'
-##     Added key: 'button.tasks.active'
-##     Added key: 'button.tasks.all'
-##     Added key: 'button.view.notes'
-##     Added key: 'button.view.profile'
-##     Added key: 'button.view.tasklist'
-##     Added key: 'checkbox.notify.user.comes.online'
-##     Added key: 'checkbox.notify.user.goes.offline'
-##     Added key: 'checkbox.show.avatars.in.contaclist'
-##     Added key: 'checkbox.use.compression'
-##     Added key: 'group.empty'
-##     Added key: 'group.offline'
-##     Added key: 'label.add.task'
-##     Added key: 'label.chatroom.fontsize'
-##     Added key: 'label.contactlist.fontsize'
-##     Added key: 'label.due'
-##     Added key: 'label.show'
-##     Added key: 'label.timeformat'
-##     Added key: 'menuitem.dial'
-##     Added key: 'menuitem.view.logs'
-##     Added key: 'message.disconnected.shutdown'
-##     Added key: 'message.invalid.username.password'
-##     Added key: 'message.no.updates'
-##     Added key: 'message.reconnect.attempting'
-##     Added key: 'message.reconnect.failed'
-##     Added key: 'message.reconnect.wait'
-##     Added key: 'message.send.picture'
-##     Added key: 'message.server.unavailable'
-##     Added key: 'message.unrecoverable.error'
-##     Added key: 'message.waiting.for.user.to.join'
-##     Added key: 'status.available'
-##     Added key: 'status.away'
-##     Added key: 'status.custom.messages'
-##     Added key: 'status.do.not.disturb'
-##     Added key: 'status.extended.away'
-##     Added key: 'status.free.to.chat'
-##     Added key: 'status.on.phone'
-##     Added key: 'status.online'
-##     Added key: 'status.pending'
-##     Added key: 'title.about'
-##     Added key: 'title.appearance'
-##     Added key: 'title.appearance.preferences'
-##     Added key: 'title.login.error'
-##     Added key: 'title.no.updates'
-##     Added key: 'title.notes'
-##     Added key: 'title.tasks'
-##     Added key: 'tooltip.appearance'
-##     Added key: 'tooltip.file.transfer'
-##     Added key: 'tooltip.send.email'
-##     Added key: 'tooltip.start.chat'
-##     Added key: 'delete.log.permanently'
-##     Added key: 'delete.permanently'
-##     Added key: 'label.contactlist.avatarsize'
-##     Added key: 'title.qq.registration'
-##     Added key: 'message.enter.qq'
-##
-## 2.6.0
-##
-## 	   Added key: 'apply'
-## 	   Added key: 'title.subscription.request'
-## 	   Added key: 'label.add.to.roster'
-## 	   Added key: 'label.audio.device'
-## 	   Added key: 'label.video.device'
-## 	   Added key: 'button.re.detect'
-##
-## 2.6.0 beta 1
-##     Added key: 'menuitem.block.contact'
-##     Added key: 'menuitem.unblock.contact'
-##     Removed key: 'status.available'
-##     Added key: 'message.nickname.not.acceptable'
-##     Added key: 'button.login'
-##     Added key: 'administrator'
-##     Added key: 'menuitem.add.groupchat.showrolesinsteadofstatus'
-## 	   Added key: 'checkbox.click.single.tray'
-## 2.7.0 beta 1
-##	   Added key: 'message.search.period.month.one'
-##	   Added key: 'message.search.period.year.one'
-##	   Added key: 'message.search.period.none'
-## 	   Added key: 'message.search.page.timeperiod'
-## 	   Added key: 'message.search.page.counter'
-## 	   Added key: 'message.search.page.right'
-## 	   Added key: 'message.search.page.left'
-##    Added key: 'checkbox.sort.asc.history'
-##	   Added key: 'message.file.transfer.dirnull'
-##     Added key: 'message.file.transfer.nodir'
-##     Added key: 'message.file.transfer.cantwritedir'
-##     Added key: 'message.file.transfer.direrror.setdir'
 
 accept = Accept
 active = Active
