--- a/core/src/main/resources/i18n/spark_i18n_es.properties
+++ b/core/src/main/resources/i18n/spark_i18n_es.properties
@@ -1,6 +1,33 @@
-# Traduccion al espanol por Jeffrey Steve Borbon Sanabria (jeffto@aclibre.org)
-# Corrección de Juan Gabriel
-# Noviembre 2008
+##
+## Spark Resource Bundle
+##
+## Additional locales can be specified by creating a new resource file in this
+## directory using the following conventions:
+##
+##   spark_i18n "_" language "_" country ".properties"
+##   spark_i18n "_" language ".properties"
+##
+## e.g.
+##    spark_i18n_en.properties       <- English resources
+##    spark_i18n_en_US.properties   <- American US resources
+##    spark_i18n_de.properties      <- German resources
+##    spark_i18n_ja.properties      <- Japanese resources
+##
+## Please note that the two digit language code should be lower case, and the
+## two digit country code should be in uppercase. Often, it is not necessary to
+## specify the country code.
+##
+## A list of language codes can be found at
+## https://www.loc.gov/standards/iso639-2/php/code_list.php
+## and a list of country codes can be found at
+## http://kirste.userpage.fu-berlin.de/diverse/doc/ISO_3166.html
+##
+## In property strings that are parameterized, single quotes can be used to
+## quote the "{" (curly brace) if necessary. A real single quote is represented by ''.
+##
+## Traduccion al espanol por Jeffrey Steve Borbon Sanabria (jeffto@aclibre.org)
+## Corrección de Juan Gabriel
+## Noviembre 2008
 
 accept = Aceptar
 
@@ -690,7 +717,6 @@ tooltip.view.changelog = Ver registro de cambios
 tooltip.view.history = Ver historial de conversaciones
 tooltip.view.readme = Ver archivo Leeme
 
-
 tree.conference.services = Servicios de conferencia
 tree.users.in.room = Usuarios en el cuarto
 unfiled = Sin clasificar
@@ -699,15 +725,6 @@ user.has.signed.in = se ha conectado.
 user.has.signed.off = se ha desconectado.
 while.offline = mientras estaba desconectado
 yes = Si
-
-
-##########################################
-#                                        #
-#                                        #
-#       Missing Translation:             #
-#                                        #
-#                                        #
-##########################################
 
 administrator = Administrator
 button.reject = Reject
@@ -771,5 +788,3 @@ title.facebook.registration = Facebook account credentials
 title.myspace.registration = MySpace account credentials
 title.subscription.request = Subscription request
 tooltip.place.a.call = Place a call to this individual
-
-#!#
