--- a/core/src/main/resources/i18n/spark_i18n_pl.properties
+++ b/core/src/main/resources/i18n/spark_i18n_pl.properties
@@ -17,17 +17,13 @@
 ## two digit country code should be in uppercase. Often, it is not necessary to
 ## specify the country code.
 ##
-## A full list of language codes can be found at
-## http://www-old.ics.uci.edu/pub/ietf/http/related/iso639.txt
-## and a full list of country codes can be found at
-## http://www.chemie.fu-berlin.de/diverse/doc/ISO_3166.html
+## A list of language codes can be found at
+## https://www.loc.gov/standards/iso639-2/php/code_list.php
+## and a list of country codes can be found at
+## http://kirste.userpage.fu-berlin.de/diverse/doc/ISO_3166.html
 ##
 ## In property strings that are parameterized, single quotes can be used to
 ## quote the "{" (curly brace) if necessary. A real single quote is represented by ''.
-##
-## REVISION HISTORY (by Spark version):
-##
-## Tlumaczenie do wersji spark_2_9_0-20170814 (nightly)
 ##
 ## Tlumaczenie wersji pl stworzyl i na biezaco korektuje TEAM MOPR Bytom (informatycy@mopr.bytom.pl) - korekty mile widziane ;)
 
