--- a/core/src/main/resources/i18n/spark_i18n_nl.properties
+++ b/core/src/main/resources/i18n/spark_i18n_nl.properties
@@ -1,14 +1,32 @@
 ##
 ## Spark Resource Bundle
 ##
+## Additional locales can be specified by creating a new resource file in this
+## directory using the following conventions:
+##
+##   spark_i18n "_" language "_" country ".properties"
+##   spark_i18n "_" language ".properties"
+##
+## e.g.
+##    spark_i18n_en.properties       <- English resources
+##    spark_i18n_en_US.properties   <- American US resources
+##    spark_i18n_de.properties      <- German resources
+##    spark_i18n_ja.properties      <- Japanese resources
+##
+## Please note that the two digit language code should be lower case, and the
+## two digit country code should be in uppercase. Often, it is not necessary to
+## specify the country code.
+##
+## A list of language codes can be found at
+## https://www.loc.gov/standards/iso639-2/php/code_list.php
+## and a list of country codes can be found at
+## http://kirste.userpage.fu-berlin.de/diverse/doc/ISO_3166.html
+##
+## In property strings that are parameterized, single quotes can be used to
+## quote the "{" (curly brace) if necessary. A real single quote is represented by ''.
+##
 ## Dutch
 ## R. van Zantvoort, August 2007
-##
-## Current version: 1.3.2
-##
-##(build 9054 synced) with my proposed additions
-##
-
 
 accept = Accepteer
 active = Actief
@@ -659,6 +677,3 @@ tooltip.view.readme = Lees ReadMe
 
 tree.conference.services = Conferentie diensten
 tree.users.in.room = Gebruikers in ruimte
-
-
-#!#
