Revert "SPARK-2091 code cleanup"

--- a/core/src/main/resources/i18n/spark_i18n_fr.properties
+++ b/core/src/main/resources/i18n/spark_i18n_fr.properties
@@ -1,46 +1,19 @@
-##
-## Spark Resource Bundle
-##
-## Additional locales can be specified by creating a new resource file in this
-## directory using the following conventions:
-##
-##   spark_i18n "_" language "_" country ".properties"
-##   spark_i18n "_" language ".properties"
-##
-## e.g.
-##    spark_i18n_en.properties       <- English resources
-##    spark_i18n_en_US.properties   <- American US resources
-##    spark_i18n_de.properties      <- German resources
-##    spark_i18n_ja.properties      <- Japanese resources
-##
-## Please note that the two digit language code should be lower case, and the
-## two digit country code should be in uppercase. Often, it is not necessary to
-## specify the country code.
-##
-## A list of language codes can be found at
-## https://www.loc.gov/standards/iso639-2/php/code_list.php
-## and a list of country codes can be found at
-## http://kirste.userpage.fu-berlin.de/diverse/doc/ISO_3166.html
-##
-## In property strings that are parameterized, single quotes can be used to
-## quote the "{" (curly brace) if necessary. A real single quote is represented by ''.
-##
-## French Translation by Ben LeBlond & Jonathan Pitre
-## ben@jivesfotware.com - jakeld@gmail.com
-## August 2011
-##
-## http://people.w3.org/rishida/tools/conversion/
-## à = à
-## â = â
-## ç = ç
-## é = é
-## è = è
-## ê = ê
-## ô = ô
-## î = î
-##
-## Translation updated by Eric Ficheux
-## May 2014
+# French Translation by Ben LeBlond & Jonathan Pitre
+# ben@jivesfotware.com - jakeld@gmail.com
+# August 2011
+
+# http://people.w3.org/rishida/tools/conversion/
+# à = à
+# â = â
+# ç = ç
+# é = é
+# è = è
+# ê = ê
+# ô = ô
+# î = î
+
+# Translation updated by Eric Ficheux
+# May 2014
 
 accept = Accepter
 active = Actif
@@ -885,3 +858,5 @@ tooltip.view.readme = Lire le ReadMe
 
 tree.conference.services = Service de Conférence
 tree.users.in.room = Utilisateurs du Salon
+
+#!#
