--- a/core/src/main/resources/i18n/spark_i18n_pt_BR.properties
+++ b/core/src/main/resources/i18n/spark_i18n_pt_BR.properties
@@ -1,29 +1,4 @@
-##
-## Spark Resource Bundle
-##
-## Additional locales can be specified by creating a new resource file in this
-## directory using the following conventions:
-##
-##   spark_i18n "_" language "_" country ".properties"
-##   spark_i18n "_" language ".properties"
-##
-## e.g.
-##    spark_i18n_en.properties       <- English resources
-##    spark_i18n_en_US.properties   <- American US resources
-##    spark_i18n_de.properties      <- German resources
-##    spark_i18n_ja.properties      <- Japanese resources
-##
-## Please note that the two digit language code should be lower case, and the
-## two digit country code should be in uppercase. Often, it is not necessary to
-## specify the country code.
-##
-## A list of language codes can be found at
-## https://www.loc.gov/standards/iso639-2/php/code_list.php
-## and a list of country codes can be found at
-## http://kirste.userpage.fu-berlin.de/diverse/doc/ISO_3166.html
-##
-## In property strings that are parameterized, single quotes can be used to
-## quote the "{" (curly brace) if necessary. A real single quote is represented by ''.
+# Spark
         
 ok = OK
 cancel = Cancelar
@@ -825,3 +800,6 @@ title.appearance.showVCards = Mostrar &VCards na lista de contatos
 title.subscription.request = Requisição de subscrição
 tooltip.appearance = Mudar a aparência das suas conversas
 tooltip.file.transfer = Preferências para transferência de arquivos
+
+
+#!#
