--- a/core/src/main/resources/i18n/spark_i18n_ru_RU.properties
+++ b/core/src/main/resources/i18n/spark_i18n_ru_RU.properties
@@ -17,13 +17,101 @@
 ## two digit country code should be in uppercase. Often, it is not necessary to
 ## specify the country code.
 ##
-## A list of language codes can be found at
-## https://www.loc.gov/standards/iso639-2/php/code_list.php
-## and a list of country codes can be found at
-## http://kirste.userpage.fu-berlin.de/diverse/doc/ISO_3166.html
+## A full list of language codes can be found at
+## http://www-old.ics.uci.edu/pub/ietf/http/related/iso639.txt
+## and a full list of country codes can be found at
+## http://www.chemie.fu-berlin.de/diverse/doc/ISO_3166.html
 ##
 ## In property strings that are parameterized, single quotes can be used to
 ## quote the "{" (curly brace) if necessary. A real single quote is represented by ''.
+##
+## REVISION HISTORY (by Spark version):
+##
+## 2.0.1
+##      Added key: 'message.restart.spark.changes'
+##      Added key: 'message.enter.icq'
+##      Added key: 'title.icq.registration'
+##      Added key: 'button.quit'
+##
+##
+##
+## 2.0.2
+##     Added key: 'button.new'
+##     Added key: 'label.group'
+##     Added key: 'label.jabber.id'
+##     Added key: 'label.enter.group.name'
+##     Added key: 'title.new.roster.group'
+##     Added key: 'title.add.contact.group'
+##     Added key: 'message.add.contact.to.list'
+##     Added key: 'title.add.contact'
+##     Added key: 'tab.conferences'
+##     Added key: 'message.authenticating'
+##     Added key: 'title.file.transfer.preferences'
+##     Added key: 'menuitem.about'
+##     Added key: 'message.invalid.status'
+##     Added key: 'message.cannot.add.contact.to.shared.group
+##     Added key: 'message.specify.contact.jid'
+##     Added key: 'message.invalid.jid.error'
+##     Added key: 'message.specify.group'
+##     Added key: 'add'
+##
+##
+##
+## 2.0.5
+##     Added key: 'Broadcast'
+##     Added key: 'label.user.on.public.network'
+##     Added key: 'label.network'
+##
+##
+## 2.0.6
+##     Added key: 'button.add.user'
+##     Added key: 'menuitem.sign.in'
+##     Added key: 'menuitem.sign.out'
+##     Added key: 'menuitem.sign.in.at.login'
+##     Added key: 'menuitem.enter.login.information'
+##     Added key: 'menuitem.delete.login.information'
+##     Added key: 'button.save'
+##
+##
+## 2.5
+##     Added key: 'button.start.chat'
+##     Added key: 'button.send.email'
+##     Added key: 'available'
+##     Added key: 'checkbox.tabs.on.top'
+##     Added key: 'user.has.signed.in'
+##     Added key: 'user.has.signed.off'
+##     Added key: 'label.unable.to.add.contact'
+##     Added key: 'label.conflict.error'
+##     Added key: 'message.room.creation.error'
+##     Added key: 'checkbox.allow.buzz'
+##     Added key: 'message.disconnected.group.chat.error'
+##     Added key: 'menuitem.show.offline.group'
+##     Added key: 'menuitem.move.to'
+##     Added key: 'menuitem.copy.to'
+##     Added key: 'label.message.style'
+##     Added key: 'label.emoticons'
+##     Added key: 'checkbox.enable.emoticons'
+##     Added key: 'message.unable.to.retrieve.last.activity'
+##     Added key: 'checkbox.use.system.look.and.feel'
+##
+## 2.5.2
+##     Added key: 'tooltip.place.voice.call'
+##     Added key: 'message.buzz.alert.notification'
+##     Added kye: 'message.buzz.sent'
+##
+## 2.5.2
+##     Added key: 'menuitem.user.guide'
+##
+##
+##
+## 	   Added key: 'title.subscription.request'
+## 	   Added key: 'label.add.to.roster'
+## 	   Added key: 'label.audio.device'
+## 	   Added key: 'label.video.device'
+## 	   Added key: 'button.re.detect'
+
+
+
 
 ok = Ok
 cancel = Отмена
