--- a/core/src/main/resources/i18n/spark_i18n_fr.properties
+++ b/core/src/main/resources/i18n/spark_i18n_fr.properties
@@ -443,7 +443,7 @@ message.add.to.roster = Ajouter aux Contacts
 message.add.user = Ajouter cet utilisateur a vos Contacts?
 message.alert.notify = Notification d'alerte
 message.already.exists = Un compte existe déja avec ce nom d'utilisateur. Veuillez réessayer.
-message.approve.subscription = Permettre à {0} de vous ajouter a ses Contacts?
+message.approve.subscription = Permettre à {0} de vous ajouter à ses Contacts?
 message.autenticating = Vérification en cours
 message.away.idle = Pas là... (mise en veille)
 message.bookmark.temporary.room.error = Impossible d'ajouter un Salon Temporaire à vos favoris.
@@ -451,13 +451,13 @@ message.broadcast.from = Message groupé de {0}
 message.broadcast.message.sent = Le message groupé a été envoyé.
 message.broadcast.no.text = SVP entrez le texte à diffuser
 message.broadcast.no.user.selected = SVP sélectionner au moins un destinataire
-message.broadcast.to = Entrez le message groupé á {0}
+message.broadcast.to = Entrez le message groupé à {0}
 message.broadcasted.to = Le message groupé a été envoyé aux utilisateurs suivants\: \n{0}
 message.buzz.alert.notification = Solliciter l'attention
 message.buzz.message = {0} veut votre attention
 message.buzz.sent = La notification d'alerte a bien été envoyée à l'utilisateur
 message.calling = Appel de {0} en cours
-message.came.online = {0} s'est connecté à {1}
+message.came.online = {0} s''est connecté à {1}
 message.cannot.add.contact.to.shared.group = Impossible d'ajouter de nouveaux contacts à un Groupe Partagé.
 message.chat.session.ended = Session de chat terminée à {0}
 message.click.to.open = Cliquez pour ouvrir
@@ -513,7 +513,7 @@ message.file.transfer.chat.window = Demande de transfert de fichier:
 message.file.transfer.file.too.big.error = Le fichier sélectionné est trop gros.\nLa taille maximale est {0} le fichier sélectionné est de {1}
 message.file.transfer.file.too.big.warning = Le fichier sélectionné est trop gros.\nProcéder malgré tout?
 message.file.transfer.notification = Notification de transfert de fichier
-message.file.transfer.rejected = Le fichier n'a pas été accepté par {0}.
+message.file.transfer.rejected = Le fichier n''a pas été accepté par {0}.
 message.file.transfer.short.message = vous envoie un fichier appelé\:
 message.find.conference.services = Rechercher les Services de Conférence
 message.forbidden.error = Une erreur de type inconnu à été reçue du serveur.
@@ -535,7 +535,7 @@ message.invite.users.to.conference = Inviter ces utilisateurs dans une salle de 
 message.is.shared.group = {0} est un groupe partagé.
 message.is.typing.a.message = {0} tappe son message...
 message.join.conference.room = Rejoindre la Salle de Conférence
-message.kicked.error = Vous n'avez pas le droit de kicker {0}.
+message.kicked.error = Vous n''avez pas le droit de kicker {0}.
 message.last.message.received = Dernier message reçu à {0}
 message.loading.please.wait = Chargement en cours. Veuillez patienter...
 message.locked.workstation = L'utilisateur a verrouillé sa station de travail.
@@ -545,7 +545,7 @@ message.negotiate.file.transfer = Négociation du transfert de fichier en cours.
 message.negotiate.stream = Négociation du transfert. Veuillez patienter...
 message.negotiation.file.transfer = Négociation du transfert de fichier avec {0}. Veuillez patienter...
 message.new.message = Nouveau message de {0}.
-message.new.spark.available = {0} est disponible. Souhaitez-vous l'installer?
+message.new.spark.available = {0} est disponible. Souhaitez-vous l''installer?
 message.nickname.in.use = Ce nickname est déjà utilisé. Veuillez en choisir un autre.
 message.nickname.not.acceptable = Vous n'êtes pas autorisé à modifier votre pseudo!
 message.no.avatar.found = Aucun avatar n'a été configuré par l'utilisateur.
@@ -623,7 +623,7 @@ message.transfer.progressbar.text.received = {0} received   @ {1}    {2}
 message.transfer.progressbar.text.sent = {0} sent   @ {1}    {2}
 message.transfer.rate = Taux de Transfert
 message.transfer.refused = Ce transfert de fichier a été refusé.
-message.transfer.waiting.on.user = En attente de {0} pour qu'il/elle accepte le tranfert.
+message.transfer.waiting.on.user = En attente de {0} pour qu''il/elle accepte le tranfert.
 message.unable.to.load.profile = Aucun profil trouvé pour {0}
 message.unable.to.retrieve.last.activity = Impossible de déterminer la dernière activité de {0}
 message.unable.to.save.password = Impossible de changer le mot de passe. Veuillez contacter votre administrateur système.
@@ -643,7 +643,7 @@ message.user.kicked.from.room = {0} a été kické du salon.
 message.user.left.room = {0} a quitté le salon.
 message.user.nickname.changed = {0} est maintenant sous le nom {1}.
 message.user.now.available.to.chat = {0} est connecté à {1}
-message.user.revoked.admin = Les droits d'Administrateurs ont été révoqués de {0}.
+message.user.revoked.admin = Les droits d''Administrateurs ont été révoqués de {0}.
 message.user.revoked.membership = Les droits de membre ont été révoqués pour {0}.
 message.user.revoked.moderator = Les droits de modérateur ont été revoqués pour {0}.
 message.user.revoked.owner = Les droits de propriétaire ont été révoqués pour {0}.
@@ -654,7 +654,7 @@ message.vcard.not.supported = Le Serveur n'est pas en mesure de supporter les VC
 message.version = Version\: {0}
 message.view.information.about.this.user = Voir les information à propos de cet utilisateur
 message.waiting.for.user.to.join = En attente de {0}
-message.went.offline = {0} s'est déconnecté à {1}
+message.went.offline = {0} s''est déconnecté à {1}
 message.you.have.been.banned = Vous avez été banni de ce salon
 message.you.have.been.kicked = Vous avez été kické de ce salon
 message.you.have.sent = Vous avez envoyé un fichier à {0}
