SPARK-2070: Login automatically after accepting server cert
When an authentication attempt fails because of the server presenting a certificate that's not recognized, the end user gets asked to add the certificate.

When the end user chooses to accept the certificate, another authentication attempt should be performed automatically. Up until this commit, that did not occur.

To be able to act based on the choice of the user, the mechanism in which the dialog is shown had to be replaced. This removed some of the more elaborate functionality added by Pawel (that allowed for each intermediate certificate in the chain to be added individually). I've opted to simply add every certificate in the chain.

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -984,8 +984,11 @@ dialog.confirm.close.all.conferences.if.invisible.msg = If you want to proceed a
 dialog.certificate.show = <html>This is the certificate and private key you are trying to add to the TrustStore. <br><br> After adding this certificate Spark will be able to establish secured <br> communications with servers that are identified by this certificate. <br><br> If you are sure that you want to add this certificate click the OK button.</html>
 dialog.id.certificate.show = <html>This is the certificate you are trying to add to the IdentityStore <br><br> After adding this certificate Spark will be able to present this certificate to remote server during establishing connection in order to authenticate itself and encrypt that connection. <br><br> If you are sure that you want to add this certificate click the OK button.</html>
 dialog.certificate.add.from.connection = <html>This is the certificate provided by the server you are trying to connect to. <br> This certificate isn't in your TrustStore, which means it is not trusted<br> and you cannot connect to this server. <br><br> Do you want to trust it and add this certificate to your TrustStore?</html>
-dialog.certificate.presented.by.server = <html>This is the certificate presented by the server. Do you wan't to trust<br> it and add to exceptions? <br><br>Click Details button, if you want to see more information about the<br> presented certificate.</html>
-dialog.certificate.chain.add.from.connection = <html>This is the certificate chain provided by the server you are connecting to. <br> It is not in your trusted list, so you can't connect. <br><br> Do you want to add this certificates to your trusted list?</html> 
+dialog.certificate.unrecognized.server.certificate = <html>The server that you are connecting to identifies itself with a certificate that <br>is not recognized by Spark. Please review the details below.</html>
+dialog.certificate.subject.label = Subject:
+
+dialog.certificate.add.unrecognized.server.certificate = <html>Do you want to add this certificate to the set of certificates that is trusted by Spark?</html>
+dialog.certificate.chain.add.from.connection = <html>This is the certificate chain provided by the server you are connecting to. <br> It is not in your trusted list, so you can't connect. <br><br> Do you want to add this certificates to your trusted list?</html>
 dialog.certificate.cannot.have.copy = This certificate is already stored within TrustStore.
 dialog.certificate.has.been.added = Certificate has been added to the TrustStore.
 dialog.certificate.has.been.added.to.identity.store = Certificate has been added to the IdentityStore.
