SPARK-2079: Improve adding self-signed certificates upon login.
This builds on the fix for SPARK-2070: when upon login a certificate is encountered that is self-signed (when this is disallowed by the configuration) prompt the user, and let them try again.

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -985,6 +985,7 @@ dialog.certificate.show = <html>This is the certificate and private key you are 
 dialog.id.certificate.show = <html>This is the certificate you are trying to add to the IdentityStore <br><br> After adding this certificate Spark will be able to present this certificate to remote server during establishing connection in order to authenticate itself and encrypt that connection. <br><br> If you are sure that you want to add this certificate click the OK button.</html>
 dialog.certificate.add.from.connection = <html>This is the certificate provided by the server you are trying to connect to. <br> This certificate isn't in your TrustStore, which means it is not trusted<br> and you cannot connect to this server. <br><br> Do you want to trust it and add this certificate to your TrustStore?</html>
 dialog.certificate.unrecognized.server.certificate = <html>The server that you are connecting to identifies itself with a certificate that <br>is not recognized by Spark. Please review the details below.</html>
+dialog.certificate.ask.allow.self-signed = <html>The server that you are connecting to identifies itself with a certificate that is self-signed. <br>The current configuration of Spark disallows the use of self-signed certificates. Would you <br>like to change this configuration and try again?</html>
 dialog.certificate.subject.label = Subject:
 
 dialog.certificate.add.unrecognized.server.certificate = <html>Do you want to add this certificate to the set of certificates that is trusted by Spark?</html>
