--- a/core/src/main/resources/i18n/spark_i18n_nl.properties
+++ b/core/src/main/resources/i18n/spark_i18n_nl.properties
@@ -677,3 +677,5 @@ tooltip.view.readme = Lees ReadMe
 
 tree.conference.services = Conferentie diensten
 tree.users.in.room = Gebruikers in ruimte
+dialog.certificate.unrecognized.server.certificate=<html>De server waarmee verbonden wordt identificeert zichzelf met een certificaat <br>dat niet wordt herkend door Spark. De details volgen hieronder.<html>
+dialog.certificate.add.unrecognized.server.certificate=<html>Wilt u dit certificaat toevoegen aan de collectie van certificaten die Spark accepteert?</html>
