SPARK-2141 rename Unfiled

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -57,7 +57,7 @@ retry = Retry
 room.name = Room Name
 save = Save
 subject = Subject
-unfiled = Unfiled
+unfiled = Not in any group
 use.default = Use Default
 user.has.signed.in = has signed in.
 user.has.signed.off = has signed off.
