SPARK-2141 rename Unfiled

--- a/core/src/main/resources/i18n/spark_i18n_lt.properties
+++ b/core/src/main/resources/i18n/spark_i18n_lt.properties
@@ -57,7 +57,7 @@ retry = Pakartoti
 room.name = Kambario vardas
 save = Įrašyti
 subject = Tema
-unfiled = Neįrašyta
+unfiled = Jokioje grupėje
 use.default = Naudoti kaip numatyta
 user.has.signed.in = Prisijungė
 user.has.signed.off = Atsijungė
