SPARK-2141 added Unfiled translation

--- a/core/src/main/resources/i18n/spark_i18n_ru_RU.properties
+++ b/core/src/main/resources/i18n/spark_i18n_ru_RU.properties
@@ -40,6 +40,7 @@ room.name = Имя комнаты
 join = Войти
 description = Описание
 subject = Тема
+unfiled = Ни в одной группе
 occupants = Участников
 accept = Принять
 reject = Отклонить
